--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.15.0",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "leaflet": "^1.9.4",
